Fixed issue with spacing and 'no-events' result

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,4 @@
 #solarLogo {
-    width: 30%;
     height: auto;
     margin: 0 auto;
 }
